# recruiter-assistant-agent

./: .env.example  .firebaserc  .gitignore  README.md  pytest.ini  recruiter-assistant-agent.excalidraw
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/features/dataset/: router.py  schemas.py
backend/src/features/ranking/: nodes.py  prompts.py  schemas.py
backend/src/graph/: screening.py  state.py
backend/src/lib/guardrails/: injection.py
backend/src/lib/llm/: client.py
backend/src/lib/vectorstore/: chroma.py
backend/tests/dataset/: test_dataset.py
backend/tests/eval/: conftest.py  test_agreement.py
backend/tests/guardrails/: test_injection.py
backend/tests/guardrails/fixtures/: injection_payloads.jsonl
backend/tests/ranking/: test_api.py  test_nodes.py
data/: exclusions.json
data/chroma/: chroma.sqlite3
data/eval/: ground_truth.json  jds.json  report.json
data/pool/: candidate_001.json  candidate_002.json  candidate_003.json  candidate_004.json  candidate_005.json  candidate_006.json  candidate_007.json  candidate_008.json  candidate_009.json  candidate_010.json  candidate_011.json  candidate_012.json  candidate_013.json  candidate_014.json  candidate_015.json  candidate_016.json  candidate_017.json  candidate_018.json  candidate_019.json  candidate_020.json  candidate_021.json  candidate_022.json  (+27 more)
docs/: architecture.md
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
scripts/: eval_harness.py  label_ground_truth.py  prepare_dataset.py  schemas.py
(+30 files in other folders)
