[project]
name = "recruiter-assistant-agent-backend"
version = "0.1.0"
description = "LangGraph-based candidate-screening agent backend"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40",
    "chromadb>=0.5",
    "pydantic>=2.7",
    "pandas>=2.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
    "langgraph>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
